# portfolio

./: .gitignore  .nojekyll  LICENSE  README.md  RELEASE.md  config.yaml  index.html  projects-config.yaml  pyproject.toml  requirements.txt
.gitea/workflows/: pages.yml
.github/workflows/: pages.yml
assets/css/: style.css
assets/js/: main.js
src/: generate_index.py  logger.py  update_config.py  yaml_parser.py
templates/: index.j2
